Updates from Overleaf

--- a/documentation/project charter latex/project_charter.tex
+++ b/documentation/project charter latex/project_charter.tex
@@ -87,7 +87,7 @@
   	\vhEntry{0.1}{10.01.2018}{KH}{document creation}
   	\vhEntry{0.2}{10.05.2018}{KH|GH}{complete draft}
   	\vhEntry{0.3}{10.12.2018}{KH|GH}{release candidate 1}
-  	\vhEntry{1.0}{10.20.2018}{KH|GH|CB}{official release}
+  	\vhEntry{1.0}{10.20.2018}{KH|GH|CB|US}{official release}
   
 \end{versionhistory}
 \newpage
@@ -119,7 +119,7 @@
 \section{System Overview}
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.4\textwidth]{images/picture}
+    \includegraphics[width=0.8\textwidth]{images/picture}
     \caption{System overview}
 \end{figure}
 \input{tex/system_overview}
