--- a/documentation/project charter latex/tex/cost_proposal.tex
+++ b/documentation/project charter latex/tex/cost_proposal.tex
@@ -2,6 +2,9 @@ The major cost expenses will come from any libraries or software needed to compl
 
 
 \subsection{Preliminary Budget}
- 
+ Licenses - $200 \newline
+Cloud storage - $200
+
 
 \subsection{Current \& Pending Support}
+Initial funding is provided to us by the University of Texas at Arlington. We begin with an 800 dollar budget. The sponsor, Frank Groenteman, is also providing funding but has not specified an exact dollar amount. Due to our project being mainly software based. 
