--- a/documentation/project charter latex/tex/documentation_reporting.tex
+++ b/documentation/project charter latex/tex/documentation_reporting.tex
@@ -4,39 +4,40 @@
 These deliverables are major grade components of the course. Completing these documents should generally be the sprint goal during the applicable sprint period. Refer to current and previous course syllabi and schedules to estimate the due dates of these items. Remove this explanatory paragraph from your draft, but leave the heading.
 
 \subsubsection{Project Charter}
-Describe how this document will be maintained and updated (how often, under what circumstances, etc.). When will the initial version be delivered? When will the final version be delivered?
+The first draft of the project charter is due on October 1st, 2019. It will be maintained by all members of our project group and will maintained on OverLeaf. If new information is ever discovered or presented to us by another project team, the sponsor (Frank Groenteman), or our professor (Christopher McMurrough). Versions will be indicated at the beginning of the project charter. 
 
 \subsubsection{System Requirements Specification}
-Describe how this document will be maintained and updated (how often, under what circumstances, etc.). When will the initial version be delivered? When will the final version be delivered?
+The system requirements specification will be worked on during Sprint 2 (October 4th - October 21st). It will be maintained using a google spreadsheet shared among the project group members. Any additional requirements will be presented to us by another project team, the sponsor (Frank Groenteman), or our professor (Christopher McMurrough) and will be updated accordingly.
+
 
 \subsubsection{Architectural Design Specification}
-Describe how this document will be maintained and updated (how often, under what circumstances, etc.). When will the initial version be delivered? When will the final version be delivered?
+The architecture design specification will be worked on during Sprint 3 (October 25th - November 11th). 
 
 \subsubsection{Detailed Design Specification}
-Describe how this document will be maintained and updated (how often, under what circumstances, etc.). When will the initial version be delivered? When will the final version be delivered?
+The detailed design specification will be worked on during Sprint 2 (October 4th - October 21st).
 
 \subsection{Recurring Sprint Items}
 During each sprint planning meeting all the the following will be documented and maintained by our team.
 
 \subsubsection{Product Backlog}
-How will items be added to the product backlog from the SRS? How will these items be prioritized? Who makes the decision (product owner, group vote, etc.)? What software will be used to maintain and share the product backlog with team members and stakeholders?
+
 After each meeting, if there is an item that should be added our team will start with voting. Because we work on application so most of the item will be use case and need com firm form sponsor.
 \subsubsection{Sprint Planning}
-How will each sprint plan be planned? How many sprints will there be (you need to look at the schedules for this course and previous Senior Design II courses during the appropriate semesters to figure this out).
+
 Our sprint will be plan every 2 weeks so our team will have 4 meeting before sprint. 
 
 \subsubsection{Sprint Goal}
-Who decides the sprint goal? How will you involve your customer in this process?
+
 Our team leader will decide our sprint goal. The process will be update with our sponsor by email or Groupme.
 \subsubsection{Sprint Backlog}
-Who decides which product backlog items make their way into the sprint backlog? How will the backlog be maintained (collaboration software, a "scrum board", etc.)?
+
 Scrum master will decides  which product backlog items make their way into the sprint backlog. We will use Excel to maintain our Sprint Backlog.
 \subsubsection{Task Breakdown}
-How will individual tasks be assigned from the sprint backlog? Will it be up to each team member to voluntarily claim a task, or will it come from the product owner? How will time spent on tasks be documented?
+
 Each tasks will be assigned to team mate base on which them prefer. Each team member will volunteer to claim task on meeting. Time spent will depend on the difficult of every tasks but no more than 2 weeks.
 
 \subsubsection{Sprint Burn Down Charts}
-Who will be responsible for generating the burn down charts for each sprint? How will they be able to access the total amount of effort expended by each individual team member? What format will the burn down chart use (include an example burn down chart below).
+
 Scrum master will responsible for generating the burn down charts for each sprint base on the product backlog and the time when team member submit task. The example of our burn down chart is showed below. We will have task and time. X-Axis is the project/iteration timeline, Y-Axi is the work that needs to be completed for the project. The time or story point estimates for the work remaining will be represented by this axis. Ideal Work Remaining Line is a straight line that connects the start point to the end point. Actual Work Remaining Line shows the actual work remaining.
 
 \begin{figure}[h!]
@@ -46,45 +47,47 @@ Scrum master will responsible for generating the burn down charts for each sprin
 \end{figure}
 
 \subsubsection{Sprint Retrospective}
-How will the sprint retrospective be handled as a team? When will this discussion happen after each sprint? What will be documented as a group and as individuals, and when will it be due?
+
 The discussion will be on Monday after sprint, and sprint retrospective one of the subject of the meeting. The solution or help will be mention for each individual and the document will be done on Friday.
 
 
 \subsubsection{Individual Status Reports}
-What sort of status will be reported by each individual member, and how often will it be reported? What key items will be contained in the report?
+
 The individual task will be report by each team member every sprint. We will use a share document online to report our process. It will show done or in process.
 \subsubsection{Engineering Notebooks}
-How often will the engineering notebook be updated, at a minimum, by each team member? What is the minimum amount of pages that will be completed for each interval, and how long will that interval be? How will the team keep each member accountable? Who will sign of as a "witness" for each ENB page? 
+ 
 The minimum update of the the engineering notebook will be every meeting on Monday. Each interval will be 5-10 pages as needed, it will depend one how team member working and research about their task. Team will review work submit to keep each member accountable. Every team member except the owner can sign of "witness" for for each ENB page. 
 \subsection{Closeout Materials}
 The following materials, in addition to major documentation deliverables, will be provided to the customer upon project closeout. Remove this paragraph from your draft, but leave the heading.
 
 \subsubsection{System Prototype}
-What will be included in the final system prototype? How and when will this be demonstrated? Will there be a Prototype Acceptance Test (PAT) with your customer? Will anything be demonstrated off-site? If so, will there be a Field Acceptance Test (FAT)?
+In the final system prototype, all parts of this project will need to be working. The prototype will consist of the hardware (EE team), firmware (other CS team), and application team (our CS team). It will be due in May, 2020. It will be demonstrated by executing various tests to the Smart Shutters. These tests will be decided on at a later date by the sponsor, Frank Groenteman.
+
 
 \subsubsection{Project Poster}
-What will be included on the poster, what will be the final dimensions, and when will it be delivered?
+The project poster due date has not yet been specified by the instructor. Details will be added at a later date.
 
 \subsubsection{Web Page}
-What will be included on the project web page? Will it be accessible to the public? When will this be delivered? Will it be updated throughout the project, or just provided at closeout (at a minimum, you need to provide a simple web page at the end).
+The web page due date has not yet been specified by the instructor. Details will be added at a later date.
+
 
 \subsubsection{Demo Video}
-What will be shown in the demo video(s)? Will you include a B-reel footage for future video cuts? Approximately how long will the video(s) be, and what topics will be covered?
+A demo video will be completed after the prototype is delivered. It will demo all the major functionalities of our application. It will contain video cuts showcasing each functionality. It will only be about 2-3 minutes long.
 
 \subsubsection{Source Code}
-How will your source code be maintained? What version control system will you adopt? Will source code be provided to the customer, or binaries only? If source code is provided, how will it be turned over to the customer? Will the project be open sourced to the general public? If so, what are the license terms (GNU, GPL, MIT, etc.). Where will the license terms be listed (in each source file, in a single readme file, etc.).
+Source code will be maintained by everyone in our project using Github. We have yet to discuss how the source code or executable will be presented to the other groups and/or the sponsor.
 
 \subsubsection{Source Code Documentation}
-What documentation standards will be employed? Will you use tools to generate the documentation (Doxygen, Javadocs, etc.). In what format will the final documentation be provided (PDF, browsable HTML, etc.)?
+Source documentation will be dependent on the programming language we use. For instance, if you Java is used, we will be generating a Javadoc.
 
-\subsubsection{Hardware Schematics}
-Will you be creating printed circuit boards (PCBs) or wiring components together? If so, list each applicable schematic and what sort of data it will contain (PCB layout, wiring diagram, etc.). If your project is purely software, omit this section.
 
-\subsubsection{CAD files}
-Will the project involve any mechanical design, such as 3D printed or laser-cut parts? If so, what software will you use to generate the files and what file formats will you provide in your closeout materials (STL, STEP, OBJ, etc.). If your project is purely software, omit this section.
+
+
+
 
 \subsubsection{Installation Scripts}
-How will the customer deploy software to new installations? Will you provide installation scripts, install programs, or any other tools to improve the process? Will there be multiple scripts provided (perhaps separate scripts for the graphical front end and back end server software)? 
+Installation scripts have not yet been decided. This will be populated once the system requirements, architecture, and design specifications have been completed.
 
 \subsubsection{User Manual}
-Will you customer need a printed or digital user manual? Will they need a setup video? Decide now what will be provided and discuss.
+A digital user manual will be created upon request from the sponsor, Frank Groenteman. Alternatively, the demo video can be provided as the user’s manual.
+
