--- a/documentation/project charter latex/tex/risks.tex
+++ b/documentation/project charter latex/tex/risks.tex
@@ -7,11 +7,11 @@ The following high-level risk census contains identified project risks with the 
 \begin{tabular}{|l|l|l|l|}
 \hline
  \textbf{Risk description} & \textbf{Probability} & \textbf{Loss (days)} & \textbf{Exposure (days)} \\ \hline
- Availability of X sensor module due to contractor delay  & 0.50 & 20 & 10 \\ \hline
- Outdoor testing grounds are not available  & 0.20 & 14 & 2.8 \\ \hline
- Internet access not available at installation site  & 0.30 & 9 & 2.7 \\ \hline
- Delays in shipping from overseas vendors  & 0.10 & 20 & 2.0 \\ \hline
- Certification delays at compliance testing facility & 0.15 & 10 & 1.5 \\ \hline
+Team communication delays  & 0.20 & 30 & 6  \\ \hline
+  App team not learning new software in time  & 0.30 & 15 & 5  \\ \hline
+ Changes in user requirements  & 0.60 & 25 & 15  \\ \hline
+ EE team not completing shutter functionality  & 0.15 & 10 & 1.5  \\ \hline
+Firmware team not fully implementing connectivity  & 0.20 & 5 & 1  \\ \hline
 \end{tabular}}
 \caption{Overview of highest exposure project risks} 
 \end{table}
