success criteria add bullet

--- a/documentation/project charter latex/project_charter.tex
+++ b/documentation/project charter latex/project_charter.tex
@@ -26,7 +26,7 @@
 
 %%% Definitions
 \definecolor{accentcolor}{rgb}{0.0,0.0,0.5} 
-\newcommand{\teamname}{}
+\newcommand{\teamname}{Code Blink}
 \newcommand{\productname}{Smart Shutter}
 \newcommand{\coursename}{CSE 4316: Senior Design I}
 \newcommand{\semester}{Fall 2019}
@@ -84,10 +84,10 @@
 
 %%% Revision History
 \begin{versionhistory}
-  	\vhEntry{0.1}{10.01.2018}{KH}{document creation}
-  	\vhEntry{0.2}{10.05.2018}{KH|GH}{complete draft}
-  	\vhEntry{0.3}{10.12.2018}{KH|GH}{release candidate 1}
-  	\vhEntry{1.0}{10.20.2018}{KH|GH|CB|US}{official release}
+  	\vhEntry{0.1}{09.13.2019}{KH}{document creation}
+  	\vhEntry{0.2}{09.23.2019}{KH|AE|US}{complete draft}
+  	\vhEntry{0.3}{09.30.2019}{KH|US|TN|JQ|AE}{release candidate 1}
+  	\vhEntry{1.0}{10.01.2019}{KH|TN|US|JQ|AE}{official release}
   
 \end{versionhistory}
 \newpage
@@ -119,7 +119,7 @@
 \section{System Overview}
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.8\textwidth]{images/picture}
+    \includegraphics[width=0.5\textwidth]{images/picture}
     \caption{System overview}
 \end{figure}
 \input{tex/system_overview}
