--- a/documentation/project charter latex/tex/success_criteria.tex
+++ b/documentation/project charter latex/tex/success_criteria.tex
@@ -1,5 +1,7 @@
 Upon completion of this prototype application, we expect the following success indicators to be observed on the Smart Shutters implementing our application software. \newline
-The application will accomplish a full functioning interface without bugs\newline
-The application will establish a connection to multiple Smart Shutters\newline
-The application will have a functioning preset timer that adjusts the corresponding shutters at the scheduled time even when the app is closed.\newline
-The Smart Shutters will finish adjusting within 3 seconds of the action event (pressing an adjustment button) on the application
+\begin{itemize}
+\item The application will accomplish a full functioning interface without bugs
+\item The application will establish a connection to multiple Smart Shutters
+\item The application will have a functioning preset timer that adjusts the corresponding shutters at the scheduled time even when the app is closed.
+\item The Smart Shutters will finish adjusting within 3 seconds of the action event (pressing an adjustment button) on the application
+\end{itemize}
