--- a/documentation/project charter latex/project_charter.tex
+++ b/documentation/project charter latex/project_charter.tex
@@ -69,7 +69,7 @@
 \vspace{0.5 in}
 \begin{figure}[h!]
 	\centering
-   	\includegraphics[width=0.50\textwidth]{images/smart_shutter_logo}
+   	\includegraphics[width=0.40\textwidth]{images/smart_shutter}
 \end{figure}
 \vspace{0.5 in}
 {\centering \huge \color{accentcolor} \sc \textbf{\teamname \\ \productname} \par}
